syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse{
    int32 sum_result = 1;
}

message PrimeDecompositionRequest{
    int64 number = 1;
}

message PrimeDecompositionResponse{
    int64 prime_factor = 1;
}

service CalculatorService{
    // Sum service
    rpc SumService(SumRequest) returns (SumResponse) {};

    // PrimeDecomposition Service
    rpc PrimeDecompositionService (PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse) {};
}